armor items & armorset config

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
@@ -441,6 +441,46 @@ pieces:
   弑神者腿甲:
   - 弑神者近战套装
   - 弑神者远程套装
+  始源林海兜帽:
+  - 始源林海魔法套装
+  始源林海头盔:
+  - 始源林海召唤套装
+  始源林海盔甲:
+  - 始源林海魔法套装
+  - 始源林海召唤套装
+  始源林海护胫:
+  - 始源林海魔法套装
+  - 始源林海召唤套装
+  金源耀日盔:
+  - 金源近战套装
+  金兜铁面盔:
+  - 金源远程套装
+  金虚万象盔:
+  - 金源魔法套装
+  金宇星界盔:
+  - 金源召唤套装
+  古圣金源盔甲:
+  - 金源近战套装
+  - 金源远程套装
+  - 金源魔法套装
+  - 金源召唤套装
+  古圣金源腿甲:
+  - 金源近战套装
+  - 金源远程套装
+  - 金源魔法套装
+  - 金源召唤套装
+  天钻头饰:
+  - 天钻套装
+  天钻胸甲:
+  - 天钻套装
+  天钻战裙:
+  - 天钻套装
+  魔影头盔:
+  - 魔影套装
+  魔影装甲:
+  - 魔影套装
+  魔影护胫:
+  - 魔影套装
 sets:
   木套装:
     lore:
@@ -1160,3 +1200,141 @@ sets:
     - §a冲刺时用弑神者能量保护自身，1秒内获得大量伤害减免和击退抗性
     - §a受到伤害后，此效果将迅速失效且进入30秒的冷却时间
     - §a你的远程武器射击时每2.5秒发射一枚弑神榴霰弹
+  始源林海魔法套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a对敌人造成伤害时生成林海光球治疗你
+    - §a速度提高5%
+    - §a即将收到致命伤害时进入8秒始源林海无敌状态
+    - §a按下套装增益键[默认为V]时进入6秒始源林海无敌状态
+    - §a无论以何种方式触发此效果，效果结束后均进入5分钟冷却
+    - §a对敌人造成魔法伤害后产生强大的自然能量爆炸，该效果有5秒冷却
+    attributes:
+      speedMulti: 0.05
+  始源林海召唤套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a对敌人造成伤害时生成林海光球治疗你
+    - §a速度提高5%
+    - §a即将收到致命伤害时进入8秒始源林海无敌状态
+    - §a按下套装增益键[默认为V]时进入6秒始源林海无敌状态
+    - §a无论以何种方式触发此效果，效果结束后均进入5分钟冷却
+    - §a+5召唤栏并提高65%召唤伤害
+    attributes:
+      speedMulti: 0.05
+      minionLimit: 5
+      damageSummonMulti: 0.65
+  金源近战套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a继承龙蒿套装、血炎套装和弑神者套装近战头盔的效果
+    - §b-> §a继承自龙蒿套装的效果：
+    - §a受到伤害时有25%的几率获得4秒的生命涌流增益，增加6点生命恢复
+    - §a你可以按下套装增益键[默认为V]来被生命能量包裹，获得龙蒿披风增益10秒
+    - §a这个效果结束之后有30秒的冷却时间
+    - §b-> §a继承自血炎套装的效果：
+    - §a极大提高生命恢复速度
+    - §a击中敌人会掉落红心，这个效果有5秒冷却时间
+    - §a使用真近战武器打击敌人时进入鲜血狂怒状态，持续5秒
+    - §a此期间近战伤害和暴击率提升20%，来自敌人的接触伤害减半
+    - §a此效果有20秒冷却时间
+    - §b-> §a继承自弑神者套装的效果：
+    - §a冲刺时用弑神者能量保护自身，1秒内获得大量伤害减免和击退抗性
+    - §a受到伤害后，此效果将迅速失效且进入30秒的冷却时间
+    - §a敌人在对你造成接触伤害后会受到2.5倍伤害
+    attributes:
+      regen: 6
+  金源远程套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a继承龙蒿套装、血炎套装和弑神者套装远程头盔的效果
+    - §b-> §a继承自龙蒿套装的效果：
+    - §a减少刷怪量和刷怪率
+    - §a远程弹幕在击中敌人后分裂为2个追踪生命能量，分别造成45%的魔法伤害
+    - §a这个效果有1秒的冷却
+    - §b-> §a继承自血炎套装的效果：
+    - §a极大提高生命恢复速度
+    - §a击中敌人会掉落红心，这个效果有5秒冷却时间
+    - §a按下按下套装增益键[默认为V]释放噬魂幽花的冤魂摧毁你的敌人
+    - §a此效果有30秒冷却时间
+    - §b-> §a继承自弑神者套装的效果：
+    - §a冲刺时用弑神者能量保护自身，1秒内获得大量伤害减免和击退抗性
+    - §a受到伤害后，此效果将迅速失效且进入30秒的冷却时间
+    - §a你的远程武器射击时每2.5秒发射一枚弑神榴霰弹
+    attributes:
+      regen: 6
+      mobLimit: -2
+      mobSpawnRateMulti: -0.5
+  金源魔法套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a继承龙蒿套装、血炎套装和始源林海套装魔法头盔的效果
+    - §b-> §a继承自龙蒿套装的效果：
+    - §a减少刷怪量和刷怪率
+    - §a每8次挥舞魔法武器就会发射出数个叶片，造成伤害的50%
+    - §b-> §a继承自血炎套装的效果：
+    - §a极大提高生命恢复速度
+    - §a击中敌人会掉落红心，这个效果有5秒冷却时间
+    - §a魔法武器每1.25秒会发射一个灵魂射弹
+    - §b-> §a继承自始源林海套装的效果：
+    - §a对敌人造成伤害时生成林海光球治疗你
+    - §a即将收到致命伤害时进入8秒始源林海无敌状态
+    - §a按下套装增益键[默认为V]时进入6秒始源林海无敌状态
+    - §a无论以何种方式触发此效果，效果结束后均进入5分钟冷却
+    - §a对敌人造成魔法伤害后产生强大的自然能量爆炸，该效果有5秒冷却
+    attributes:
+      regen: 6
+      mobLimit: -2
+      mobSpawnRateMulti: -0.5
+  金源召唤套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a继承龙蒿套装、血炎套装和始源林海套装召唤头盔的效果
+    - §b-> §a继承自龙蒿套装的效果：
+    - §a减少刷怪量和刷怪率
+    - §b-> §a继承自血炎套装的效果：
+    - §a极大提高生命恢复速度
+    - §a击中敌人会掉落红心，这个效果有5秒冷却时间
+    - §a如果玩家在90%血量以上，增加15%召唤伤害
+    - §a在50%生命及以下获得40点防御和4点生命恢复
+    - §b-> §a继承自始源林海套装的效果：
+    - §a对敌人造成伤害时生成林海光球治疗你
+    - §a即将收到致命伤害时进入8秒始源林海无敌状态
+    - §a按下套装增益键[默认为V]时进入6秒始源林海无敌状态
+    - §a无论以何种方式触发此效果，效果结束后均进入5分钟冷却
+    attributes:
+      regen: 6
+      mobLimit: -2
+      mobSpawnRateMulti: -0.5
+  天钻套装:
+    lore:
+    - ''
+    - §a套装效果：
+    - §a你获得六个宝石碎片；其中四个对应四个职业，还有一对基础宝石
+    - §a受到伤害时，你会损失一个宝石
+    - §a失去的宝石对应你当前使用的武器的职业（若手持物品不是武器，则默认为近战宝石）
+    - §a如果你已经损失了该宝石，那么这次失去的将会是一颗基础宝石
+    - §a破碎的宝石需要30秒来重新凝聚
+    - §a黄色宝石增加45%近战伤害，26%近战速度和12%近战暴击率
+    - §a绿色宝石增加50%远程伤害和16%远程暴击率
+    - §a紫色宝石给予50%魔法伤害和16%魔法暴击率；最大魔力值提升100
+    - §a蓝色宝石给予72%召唤伤害和4个召唤栏，并取消手持非召唤武器的召唤伤害降低惩罚
+    - §a红色基础宝石给予150防御和12%伤害减免；丢失基础宝石时优先丢失红色宝石
+    - §a粉色基础宝石给予40%飞行时间，8生命回复和更长的受伤无敌帧
+  魔影套装:
+    lore:
+    - ''
+    - §a“众戒归一黑暗中”
+    - §a套装效果：
+    - §a增加10个召唤栏
+    - §a按下套装增益键[默认为V]以黑魔法咒语强化自身
+    - §a这道咒语生效时防御力和伤害减免各降低35%，但造成伤害提高75%
+    - §a该效果每次触发都将持续时间重置为30秒，没有冷却限制
+    attributes:
+      minionLimit: 10
