--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/buff.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/buff.yml
@@ -53,6 +53,27 @@ buffConflicts:
   26:
     弑神者冲刺: 0
     弑神者冲刺冷却: 1
+  27:
+    始源林海无敌: 0
+    始源林海无敌冷却: 1
+  28:
+    黄色天钻宝石: 0
+    黄色天钻宝石冷却: 1
+  29:
+    绿色天钻宝石: 0
+    绿色天钻宝石冷却: 1
+  30:
+    紫色天钻宝石: 0
+    紫色天钻宝石冷却: 1
+  31:
+    蓝色天钻宝石: 0
+    蓝色天钻宝石冷却: 1
+  32:
+    红色天钻宝石: 0
+    红色天钻宝石冷却: 1
+  33:
+    粉色天钻宝石: 0
+    粉色天钻宝石冷却: 1
   100:
     狮心圣裁能量外壳: 0
     狮心圣裁能量外壳冷却: 1
@@ -610,6 +631,79 @@ effects:
   弑神者冲刺冷却:
     isBuff: false
     tooltip: 你需要稍等片刻才能再次使用弑神者冲刺
+  始源林海无敌:
+    isBuff: true
+    buffOnTimeout: 始源林海无敌冷却
+    buffOnTimeoutDuration: 6000
+    tooltip: 短暂的无敌效果
+  始源林海无敌冷却:
+    isBuff: false
+    tooltip: 你需要稍等片刻才能再次使用始源林海无敌
+  黄色天钻宝石:
+    isBuff: true
+    attributes:
+        damageMeleeMulti: 0.45
+        useSpeedMeleeMulti: 0.26
+        critMelee: 12
+    tooltip: 近战属性大幅提高
+  黄色天钻宝石冷却:
+    isBuff: false
+    tooltip: 黄色天钻宝石破碎了！
+  绿色天钻宝石:
+    isBuff: true
+    attributes:
+        damageRangedMulti: 0.5
+        critRanged: 16
+    tooltip: 远程属性大幅提高
+  绿色天钻宝石冷却:
+    isBuff: false
+    tooltip: 绿色天钻宝石破碎了！
+  紫色天钻宝石:
+    isBuff: true
+    attributes:
+        damageMagicMulti: 0.5
+        critMagic: 16
+        maxMana: 100
+    tooltip: 魔法属性大幅提高
+  紫色天钻宝石冷却:
+    isBuff: false
+    tooltip: 紫色天钻宝石破碎了！
+  蓝色天钻宝石:
+    isBuff: true
+    attributes:
+        damageSummonMulti: 0.72
+        minionLimit: 4
+        minionDamagePenaltyFactor: 0.5
+    tooltip: 召唤属性大幅提高
+  蓝色天钻宝石冷却:
+    isBuff: false
+    tooltip: 蓝色天钻宝石破碎了！
+  红色天钻宝石:
+    isBuff: true
+    attributes:
+        defence: 150
+        damageTakenMulti: -0.12
+    tooltip: 防御属性大幅提高
+  红色天钻宝石冷却:
+    isBuff: false
+    tooltip: 红色天钻宝石破碎了！
+  粉色天钻宝石:
+    isBuff: true
+    attributes:
+        flightTimeMulti: 0.4
+        regen: 8
+        invulnerabilityTick: 10
+    tooltip: 杂项属性大幅提高
+  粉色天钻宝石冷却:
+    isBuff: false
+    tooltip: 粉色天钻宝石破碎了！
+  魔影激怒:
+    isBuff: false
+    attributes:
+        defenceMulti: -0.35
+        damageTakenMulti: 0.35
+        damageMulti: 0.75
+    tooltip: 你以防御和伤害减免为代价大大提升自身的攻击力
   暴君之怒:
     isBuff: true
     attributes:
