--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/armorSet.yml
@@ -1318,7 +1318,7 @@ sets:
     - §a套装效果：
     - §a你获得六个宝石碎片；其中四个对应四个职业，还有一对基础宝石
     - §a受到伤害时，你会损失一个宝石
-    - §a失去的宝石对应你当前使用的武器的职业（若手持物品不是武器，则默认为近战宝石）
+    - §a失去的宝石对应你上一次手持的武器所属职业（默认为近战宝石）
     - §a如果你已经损失了该宝石，那么这次失去的将会是一颗基础宝石
     - §a破碎的宝石需要30秒来重新凝聚
     - §a黄色宝石增加45%近战伤害，26%近战速度和12%近战暴击率
