--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -338,6 +338,7 @@
       - 皇家凝胶
       - 金币
       - 弱效治疗药水:5:15
+      - 黏鞍:1:1:0.5
     2:
       giveAllItems: false
       amountToGive: 2
@@ -488,6 +489,7 @@
     2:
       items:
       - 失谐钩爪:1:1:0.3333
+      - 明胶鞍:1:1:0.5
       - 刃杖:1:1:0.3333
       - 挥发明胶
       - 金币:30
@@ -706,6 +708,7 @@
       - 利刃台风
     2:
       items:
+      - 虾松露
       - 猪鲨之翼:1:1:0.1
       - 海爵剑:1:1:0.1
       - 金币:75
