mount stepping (step height)

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -14000,6 +14000,14 @@ Dodu的手炮:
   - §r装备到坐骑栏后按坐骑按键[默认为R]乘坐猪龙鱼坐骑
   worth: 5000000
   rarity: 10
+星流之盒:
+  item: IRON_INGOT
+  lore:
+  - §r[坐骑]
+  - §r装备到坐骑栏后按坐骑按键[默认为R]乘坐星流飞椅
+  - §r坐在飞椅上时按住星流飞椅减速键[默认为X]将会以较低速度飞行
+  worth: 30000000
+  rarity: 15
 日耀天塔柱:
   item: STICK
   lore:
